--- a/QuanLyThongTinDaoTao/Areas/Admin/Views/Shared/_MainAdminLayout.cshtml
+++ b/QuanLyThongTinDaoTao/Areas/Admin/Views/Shared/_MainAdminLayout.cshtml
@@ -55,7 +55,7 @@
                         <a class="dropdown-item" href="#">
                             <i class="fas fa-user-circle me-2"></i> Tài khoản
                         </a>
-                        <a class="dropdown-item" href="@Url.Action("DangXuat", "TaiKhoan", new { area = "Admin" })">
+                        <a class="dropdown-item" href="@Url.Action("DangXuat", "Login", new { area = "Admin" })">
                             <i class="fas fa-sign-out-alt me-2"></i> Đăng xuất
                         </a>
                     </div>
@@ -106,7 +106,7 @@
                                 <i class="fa fa-tachometer-alt me-2"></i>Trang chủ
                             </a>
                             <a href="@Url.Action("DanhSachBuoiDay", "DiemDanhHocVien")" class="nav-item nav-link">
-                                <i class="fas fa-calendar-alt me-2"></i>Buổi học của tôi
+                                <i class="fas fa-calendar-alt me-2"></i>Lịch Dạy Của Tôi
                             </a>
 
                         }
