--- a/QuanLyThongTinDaoTao/Areas/Admin/Views/KhoaHoc/Edit.cshtml
+++ b/QuanLyThongTinDaoTao/Areas/Admin/Views/KhoaHoc/Edit.cshtml
@@ -37,18 +37,22 @@
                 </div>
                 <div class="row">
                     <div class="col-md-6 mb-3">
-                        @Html.LabelFor(model => model.TenKhoaHoc, "Tên Khóa Học", new { @class = "form-label" })
+                        <i class="fa-solid fa-book-open"></i>@Html.LabelFor(model => model.TenKhoaHoc, "Tên Khóa Học", new { @class = "form-label" })
+                        <span class="text-danger">*</span>
                         @Html.TextBoxFor(model => model.TenKhoaHoc, new { @class = "form-control", required = "required" })
                         @Html.ValidationMessageFor(model => model.TenKhoaHoc, "", new { @class = "text-danger" })
                     </div>
 
                     <div class="col-md-6 mb-3">
+                        <i class="fa-solid fa-clock"></i>
                         @Html.LabelFor(model => model.ThoiLuong, "Thời Lượng (tiết)", new { @class = "form-label" })
+                        <span class="text-danger">*</span>
                         @Html.TextBoxFor(model => model.ThoiLuong, new { @class = "form-control", type = "number", min = "0" })
                     </div>
                 </div>
 
                 <div class="col-md-12 mb-3">
+                    <i class="fa-solid fa-file-lines"></i>
                     @Html.LabelFor(model => model.MoTa, "Mô Tả", new { @class = "form-label" })
                     @Html.TextAreaFor(model => model.MoTa, new { @class = "form-control", rows = 5, id = "MoTa" })
                     @Html.ValidationMessageFor(model => model.MoTa, "", new { @class = "text-danger" })
