--- a/QuanLyThongTinDaoTao/Areas/Admin/Views/BuoiHoc/Create.cshtml
+++ b/QuanLyThongTinDaoTao/Areas/Admin/Views/BuoiHoc/Create.cshtml
@@ -219,5 +219,5 @@
     document.querySelector('[name="GioKetThuc"]').addEventListener('change', fetchAvailableGiangViens);
 
     // Nếu cần load sẵn ban đầu (ví dụ khi chỉnh sửa), gọi luôn
-    // fetchAvailableGiangViens();
+     fetchAvailableGiangViens();
 </script>
